Fix register form width on mobile view

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -148,7 +148,7 @@ h3{
 .inputLogin{
     margin: 0 auto;
     display: block;
-    width: 250px;
+    width: 100%;
     height: 50px;
     font-size: 20px;
     background: transparent;
